<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/impaired_main"
        android:textColor="@color/MainTitle"
        android:textSize="@dimen/MainTitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AI"
        android:layout_width="305dp"
        android:layout_height="89dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/AI"
        android:textSize="@dimen/MainTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manual"
        android:layout_width="305dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        android:text="@string/manual"
        android:textColor="@color/MainTitle"
        android:textSize="@dimen/MainTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/AI"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/AI"
        app:layout_constraintTop_toBottomOf="@+id/AI" />

    <TextView
        android:id="@+id/In_impaired_center"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/user_center"
        android:textColor="@color/Links"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manual" />
</androidx.constraintlayout.widget.ConstraintLayout>